add content on index, create navbar, and first 5 sections of page

--- a/index.html
+++ b/index.html
@@ -7,7 +7,160 @@
       <title>Wikipedia, the free enclyopedia</title>
     </head>
     <body>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-3">
+           <img src="img/wiki.png" rel="Wikipedia"> 
+           <ul class="nav flex-column">
+            <li class="nav-item">
+              <a class="nav-link active" href="#">Main page</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Contents</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Featured Content</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Current events</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Random article</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Donate to Wikipedia</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Wikipedia store</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="#">Interaction</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Help</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">About Wikipedia</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Community Portal</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Recent changes</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Contact Page</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">What links here</a>
+            </li>
+          </ul>
+          </div>
+          <div class="col-md-5">
+            <div class="rone">
+              <h4>Welcome to <a href="https://en.wikipedia.org/wiki/Main_Page">Wikipedia</a></h4>
+              <h5>the <a href="https://en.wikipedia.org/wiki/Free_content">free </a><a href="https://en.wikipedia.org/wiki/Encyclopedia">enclyopedia</a> that<a href="https://en.wikipedia.org/wiki/Wikipedia:Introduction"> anyone can edit.</a></a></h5>
+              <h5><a href="https://en.wikipedia.org/wiki/Special:Statistics">6,001,630</a> articles in <a href="https://en.wikipedia.org/wiki/English_language">English</a></h5>
+            </div>
+          </div>
+          <div class="col-md-1">
+            <ul>
+              <li>Arts</li>
+              <li>Biography</li>
+              <li>Geography</li>
+            </ul>
+          </div>
+
+          <div class="col-md-1">
+            <ul>
+              <li>History</li>
+              <li>Mathematics</li>
+              <li>Science</li>
+            </ul>
+          </div>
+
+          <div class="col-md-2">
+            <ul>
+              <li>Society</li>
+              <li>Technology</li>
+              <li>All Portals</li>
+            </ul>
+          </div>
+          <div class="col-md-9">
+            <p class="bg-warning">The <a href="#">English-language Wikipedia</a> thans its contributors for creating more than six million articles! <a href="#">Learn how you can take part </a> in the encyclopedia's continued improvement.</a></p>         
+          </div>
+          <div class="col-md-5">
+            <div class="panel panel-success">
+              <div class="panel-heading">
+                <h2 class="panel-title">From today's featured article</h2>
+              </div>
+              <div class="panel-body">
+                <img src="img/wiki.png" rel="wiki" class="boxone">
+                <p class="bg-success">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Integer malesuada nunc vel risus commodo. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="panel panel-info">
+              <div class="panel-heading">
+                <h2 class="panel-title">In the news</h2>
+              </div>
+              <div class="panel-body">
+                <div class="bg-info">
+                  <ul>
+                   <li> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</li>
+                   <li> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Erit in voluptate velit esse cillum dolore eu fugiat.</li>
+                  </ul>
+                <p>Iaculis urna id volutpat lacus laoreet non curabitur gravida arcu. Integer malesuada nunc vel risus commodo viverra maecenas accumsan. Suspendisse interdum consectetur libero id faucibus nisl tincidunt. Tellus id interdum velit. </p>
+                </div>
+              </div>
+              </div>
+            </div>
+            <div class="col-md-5">
+              <div class="panel panel-success">
+                <div class="panel-heading">
+                  <h2 class="panel-title">From today's featured article</h2>
+                </div>
+                <div class="panel-body">
+                  <img src="img/wiki.png" rel="wiki" class="boxtwo">
+                  <p class="bg-success">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Integer malesuada nunc vel risus commodo. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat.</p>
+                </div>
+              </div>
+            </div>
+            
+          <div class="col-md-4">
+            <div class="panel panel-info">
+              <div class="panel-heading">
+                <h2 class="panel-title">In the news</h2>
+              </div>
+              <div class="panel-body">
+                <div class="bg-info">
+                  <ul>
+                   <li> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</li>
+                   <li> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Erit in voluptate velit esse cillum dolore eu fugiat.</li>
+                  </ul>
+                <p>Iaculis urna id volutpat lacus laoreet non curabitur gravida arcu. Integer malesuada nunc vel risus commodo viverra maecenas accumsan. Suspendisse interdum consectetur libero id faucibus nisl tincidunt. Tellus id interdum velit. </p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-12">
+            <div class="panel panel-danger">
+              <div class="panel-heading">
+                <h2 class="panel-title">From today's featured list</h2>
+                <p class="bg-danger">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Erit in voluptate velit esse cillum dolore eu fugiat. </p>
+              
+              </div>
+            </div>
+          </div>
 
 
+
+
+
+
+
+        </div>
+      </div>
     </body>
-    </html>
+  </html>
